--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -720,6 +720,7 @@ Smoothness assumptions:
 * regression assumption,
 * random effects assumption.
 
+<div class="panel panel-warning">
 <div class="panel-heading">
 <i class="fa fa-warning"></i> Warning 
 </div>
