--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -904,8 +904,7 @@ The first asymptotics leads to MLE for $\sigma^2$ that is consistent.
 The second type of asymptotics does not lead to consistent MLE of $\sigma^2$. 
 That was precisely the point in Kiefer and Wolfowitz[^KW].
 
-[^KW]: Kiefer, J. and Wolfowitz, J., 1956. 
-  Consistency of the maximum likelihood estimator in the presence of infinitely many incidental parameters. *Ann. Math. Statist.*, **27**, 887&ndash;906. [PDF from Project Euclid](http://projecteuclid.org/euclid.aoms/1177728066)
+[^KW]: Kiefer, J. and Wolfowitz, J., 1956. Consistency of the maximum likelihood estimator in the presence of infinitely many incidental parameters. *Ann. Math. Statist.*, **27**, 887&ndash;906. [PDF from Project Euclid](http://projecteuclid.org/euclid.aoms/1177728066)
 
 The second type of asymptotics where observations within a cluster 
 increases but not the number of clusters, there are only fixed effects 
